# J-DeepLearning-image-app-with-mlflow-DVC

./: LICENSE  README.md  main.py  pyproject.toml  template.py
config/: config.yaml
research/: 01.data_ingestion.ipynb  data_ingestion_trials.ipynb  trials.ipynb
src/ImageClassifier/: __init__.py
src/ImageClassifier/components/: data_ingestion.py
src/ImageClassifier/config/: configuration.py
src/ImageClassifier/pipeline/: stage_01_data_ingestion.py
src/ImageClassifier/utils/: common.py
