[build-system]
requires = ["setuptools >= 64"]
build-backend = "setuptools.build_meta"

[project]
name = "J-DeepLearning-image-app-with-mlflow-DVC"
version = "0.0.0"

authors = [
  { name="JianHHHH", email="jiancanada50@gmail.com" },
]
description = "A small example package"
readme = "README.md"

dependencies = [
"tensorflow==2.12.0",
"pandas", 
"gdown",
"dvc",
"mlflow==2.2.2",
"notebook",
"numpy",
"matplotlib",
"seaborn",
"python-box==6.0.2",
"pyYAML",
"tqdm",
"ensure==1.0.2",
"joblib",
"types-PyYAML",
"scipy",
"Flask",
"Flask-Cors"
]